<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
	<name>rys_messages</name>
	<version>0.0.0</version>
	<description>Custom messages for MiniRys robot</description>
	<maintainer email="mjbogusz.email.address@domain.name.com">MJBogusz</maintainer>
	<license></license>

	<buildtool_depend>ament_cmake</buildtool_depend>

	<build_depend>builtin_interfaces</build_depend>
	<build_depend>rosidl_default_generators</build_depend>
	<exec_depend>builtin_interfaces</exec_depend>
	<exec_depend>rosidl_default_runtime</exec_depend>

	<export>
		<build_type>ament_cmake</build_type>
	</export>
</package>
