<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
	<name>rys_executor</name>
	<version>0.0.0</version>
	<description>Executor for MiniRys robot</description>
	<maintainer email="dan.gield@gmail.com">Daniel Giełdowski</maintainer>
	<license></license>

	<buildtool_depend>ament_cmake</buildtool_depend>

	<build_depend>rclcpp</build_depend>
	<build_depend>std_msgs</build_depend>
	<build_depend>rys_interfaces</build_depend>

	<exec_depend>rclcpp</exec_depend>
	<exec_depend>std_msgs</exec_depend>
	<exec_depend>rys_interfaces</exec_depend>

	<export>
		<build_type>ament_cmake</build_type>
	</export>
</package>
