<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
	<name>rys_launch</name>
	<version>0.0.0</version>
	<description>Launch node for MiniRys robot</description>
	<maintainer email="mjbogusz.email.address@domain.name.com">MJBogusz</maintainer>
	<license></license>

	<buildtool_depend>ament_cmake</buildtool_depend>

	<build_depend>rclcpp</build_depend>
	<build_depend>std_msgs</build_depend>
	<build_depend>rys_interfaces</build_depend>
	<build_depend>rys_motors_controller</build_depend>
	<build_depend>rys_sensor_battery</build_depend>
	<build_depend>rys_sensor_dwm1000</build_depend>
	<build_depend>rys_sensor_imu</build_depend>
	<build_depend>rys_sensor_vl53l0x</build_depend>

	<exec_depend>rclcpp</exec_depend>
	<exec_depend>std_msgs</exec_depend>
	<exec_depend>rys_interfaces</exec_depend>
	<exec_depend>rys_motors_controller</exec_depend>
	<exec_depend>rys_sensor_battery</exec_depend>
	<exec_depend>rys_sensor_dwm1000</exec_depend>
	<exec_depend>rys_sensor_imu</exec_depend>
	<exec_depend>rys_sensor_vl53l0x</exec_depend>

	<export>
		<build_type>ament_cmake</build_type>
	</export>
</package>
