<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
	<name>rys_sensor_imu</name>
	<version>0.0.0</version>
	<description>MPU6050 inertial measurement unit node for MiniRys robot</description>
	<maintainer email="mjbogusz.email.address@domain.name.com">MJBogusz</maintainer>
	<license></license>

	<buildtool_depend>ament_cmake</buildtool_depend>
	<buildtool_depend>rosidl_default_generators</buildtool_depend>

	<build_depend>rclcpp</build_depend>
	<build_depend>rmw_implementation_cmake</build_depend>
	<build_depend>rys_messages</build_depend>
	<build_depend>std_msgs</build_depend>

	<exec_depend>rclcpp</exec_depend>
	<exec_depend>rmw_implementation</exec_depend>
	<exec_depend>rosidl_default_runtime</exec_depend>
	<exec_depend>rys_messages</exec_depend>
	<exec_depend>std_msgs</exec_depend>

	<export>
		<build_type>ament_cmake</build_type>
	</export>
</package>
